package ecmaserve.trash;
syntax = "proto3";

message StartGame
{
}

message JoinGame
{
}

enum CardSource
{
  discard = 1;
  draw = 2;
}

message DrawCard
{
  CardSource source = 1;
}

enum SlotNumber
{
  slot1 = 1;
  slot2 = 2;
  slot3 = 3;
  slot4 = 4;
  slot5 = 5;
  slot6 = 6;
  slot7 = 7;
  slot8 = 8;
  slot9 = 9;
  slot10 = 10;
}

message ReplaceCard
{
  SlotNumber slot = 1;
}

message DiscardCard
{
}

message Actions {
  oneof Action {
    DrawCard draw = 1;
    ReplaceCard replace = 2;
    StartGame start = 3;
    JoinGame join = 4;
    DiscardCard discard = 5;
  }
}